fixes #79 Dark mode change color

--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -262,8 +262,8 @@ $nav-tabs-link-active-color: #fff;
 $nav-tabs-link-active-bg: $color-blue-3;
 $grid-gutter-width: 1.25rem;
 
-// for react-select
-:root {
+.light {
+  // for react-select
   --sidebar-submenu-bg: #0c1215;
   --dropdown-item-hover-color: #1ab394;
   --dropdown-item-hover-bg: #e8e9ec;
@@ -273,9 +273,10 @@ $grid-gutter-width: 1.25rem;
   --dropdown-item-color: #081240;
   --input-border-color: #e3e3e3;
   --input-placeholder-color: #c0c0c0;
+  --dropdown-multi-bg: #ebebeb;
+  --dropdown-indicator-color: '#222328';
 }
 $form-check-input-checked-color: $white;
 $form-check-radio-checked-color: $success;
 $form-check-input-checked-bg-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-checked-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/></svg>") !default;
 $form-check-radio-checked-bg-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$form-check-radio-checked-color}'/></svg>") !default;
-
